syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service ClubService {
  rpc CreateClub(CreateClubRequest) returns (CreateClubResponse) {}
  rpc FindClub(FindClubRequest) returns (FindClubResponse) {}
}

message CreateClubRequest {
  string name = 1;
  int64 year = 2;
  int64 trophy = 3;
}

message CreateClubResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

message FindClubData {
  int64 id = 1;
  string name = 2;
  int64 year = 3;
  int64 trophy = 4;
}

message FindClubRequest {
  int64 id = 1;
}

message FindClubResponse {
  int64 status = 1;
  string error = 2;
  FindClubData data = 3;
}